(dev) : fixed animation / not working on mobile

--- a/components/elements/Layout/styles.module.scss
+++ b/components/elements/Layout/styles.module.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	overflow: hidden;
 
 	width: 100%;
 	height: calc(100vh - 120px);
@@ -20,6 +21,6 @@
 	}
 }
 
-.index {
-	z-index: -666;
+.layoutSizer {
+	height: 100%;
 }
