--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -21,6 +21,7 @@ body {
 // CUSTOM SCROLLBARS
 ::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 	background-color: rgba(0, 0, 0, 0);
 }
@@ -33,6 +34,7 @@ body {
 ::-webkit-scrollbar-thumb {
 	border-radius: 7px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	background-color: $purple;
 }
 
@@ -97,3 +99,13 @@ h3 {
 	background-color: $white;
 	transition: 1s all ease-in-out;
 }
+
+// .layoutSizer {
+// 	width: 100vw !important;
+// 	height: calc(100vh - 120px) !important;
+
+// 	@include breakpoint($tab) {
+// 		height: calc(100vh - 180px) !important;
+// 		// padding-right: 16px;
+// 	}
+// }
